<resources>
    <string name="app_name">Conta Gomme</string>
    <string name="front_tire">Anteriore</string>
    <string name="rear_tire">Posteriore</string>
    <string name="reset_button">Azzera</string>
    <string name="next_button">Prossima moto</string>
    <string name="moto_inserite">Moto inserite: %1$s</string>
    <string name="send_email">E-mail</string>
    <string name="add_race_name">Inserisci luogo gara</string>
    <string name="input_race_name">Nome/luogo della gara</string>
    <string name="input_race_notes">Note</string>
    <string name="race_name_title">Nome Gara</string>
    <string name="use_html">Usa HTML in email</string>
    <string name="auto_go_on">Continua automaticamente</string>
    <string name="subject">Conteggio gomme gara %1$s del %2$s.</string>
    <string name="subject_no_date">Conteggio gomme gara %1$s.</string>
    <string name="data_saved">Salvataggio effettuato</string>
    <string name="race_reset">Azzeramento effettuato con successo.</string>
    <string name="reset_undo">Annulla</string>
    <string name="done_undo">Azzeramento annullato.</string>
    <string name="new_version_detected">È in esecuzione una nuova versione dell\'app. I dati salvati precedentemente non sono più validi, per tanto saranno cancellati.</string>
    <string name="title_activity_settings">Impostazioni</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_menu">Opzioni</string>
    <string name="auto_continue_title">Continua automaticamente</string>
    <string name="auto_continue_summary">Seleziona per continuare automaticamente alla moto successiva quanto entrambe le gomme, anteriore e posteriore, sono selezionate.</string>
    <string name="attach_file_title">Allega file</string>
    <string name="attach_file_summary">Allega file con dettaglio gomme all\'email</string>
    <string name="email_recipient">Destinatario email</string>
    <string name="pref_title_file_type">Tipo di file da allegare</string>
    <string name="explain_why_write_storage">L\'accesso alla scrittura è necessario per poter salvare il file con la lista delle gomme.</string>
    <string name="permision_available_write_storage">Accesso all\'archivio concesso</string>
    <string name="permision_not_available_write_storage">Accesso all\'archivio negato. Non sarà possibile allegare file alle email.\nLa relativa opzione è stata deselezionata automaticamente.</string>
    <string name="race_name">Gara di</string>
    <string name="brand">Marca</string>
    <string name="separate_with_colon">Inserisci indirizzi separati da virgola</string>
    <string name="add_button">Aggiungi</string>
    <string name="brands_menu">Anagrafica Marche</string>
    <string name="dialog_delete_title">Elimina</string>
    <string name="dialog_delete_message">Vuoi eliminare %1$s dall\'elenco?</string>
    <string name="dialog_delete_button">Elimina</string>
    <string name="dialog_cancel_button">Annulla</string>
    <string name="add_brand_dialog_title">Aggiungi una marca</string>
    <string name="add_brand_dialog_hint">Nome Marca</string>
    <string name="dialog_new_brand_title">Aggiungi nuova marca</string>
    <string name="dialog_new_brand_message">Inserisci la nuova marca</string>
    <string name="dialog_add_button">Aggiungi</string>
    <string name="brand_list_activity_name">Marche</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="races">Anagrafica Gare</string>
    <string name="label_order">Ordine</string>
    <string name="order_hint">Ordine di visualizzazione</string>
    <string name="edit_brand_dialog_title">Modifica</string>
    <string name="add_race_dialog_hint">Nome gara</string>
    <string name="race_list_activity_name">Gare</string>
    <string name="race_date">Data della gara</string>
    <string name="add_race_dialog_title">Aggiungi gara</string>
    <string name="name">Nome gara</string>
    <string name="date">Data gara</string>
    <string name="note">Note</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="race_name_mandatory">Il nome della gara è obbligatorio</string>
    <string name="edit_race_dialog_title">Modifica gara</string>
    <string name="race_menu">Gare</string>
    <string name="open_race_menu">Apri gara</string>
    <string name="select_race_dialog">Seleziona la gara</string>
    <string name="fill_in_wheel_count">Conta!</string>
    <string name="fill_in_wheel_count_desc">Apri la gara corrente per poter effettuare il conteggio delle gomme.</string>
    <string name="open_race_list_label">Anagrafica gare</string>
    <string name="open_race_list_desc">Aggiungi, modifica e cancella le gare della stagione.</string>
    <string name="open_tire_list_label">Anagrafica pneumatici</string>
    <string name="open_tire_list_desc">Aggiugi, modifica e cancelle le marche dei pneumatici.</string>
    <string name="pref_auto_continue">auto_continue</string>
    <string name="pref_email_recipient">email_recipient</string>
    <string name="pref_attach_file">attach_file</string>
    <string name="pref_attach_file_type">file_type_list</string>
    <string name="pref_bike_counter">bike_counter</string>
    <string name="no_bike_inserted">Nessuna moto inserita per ora...</string>

</resources>
