<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/send_email"
        android:icon="@drawable/ic_mail_outline_white_24dp"
        android:orderInCategory="20"
        android:title="@string/send_email"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_race"
        android:orderInCategory="10"
        android:title="@string/open_race_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset"
        android:orderInCategory="30"
        android:title="@string/reset_button"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/brands"
        android:orderInCategory="50"
        android:title="@string/brands_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/races"
        android:orderInCategory="60"
        android:title="@string/races"
        app:showAsAction="never" />
</menu>
