<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/send_email"
        android:orderInCategory="10"
        android:title="@string/send_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/give_race_name"
        android:orderInCategory="20"
        android:title="@string/add_race_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/auto_save_bike"
        android:checkable="true"
        android:orderInCategory="30"
        android:title="@string/auto_go_on"
        app:showAsAction="never" />
    <item
        android:id="@+id/use_html"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/use_html"
        app:showAsAction="never" />
</menu>
