<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_brands"
            android:icon="@drawable/delete"
            android:title="@string/brands_menu" />
        <item
            android:id="@+id/menu_races"
            android:icon="@drawable/delete"
            android:title="@string/races" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/delete"
            android:title="@string/settings_menu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/delete"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/delete"
                android:title="Send" />
        </menu>
    </item>

</menu>
