<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_default_half">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_race_name"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/race_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/race_date" />

    <EditText
        android:id="@+id/coffe_type_descr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/input_race_notes"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="6"
        android:maxLines="10"
        android:minLines="4"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@android:string/ok"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_ok"
            android:background="@null"
            android:text="@android:string/cancel"
            android:textAllCaps="true" />

    </RelativeLayout>

</LinearLayout>